# mlops-mnist-signlangauge

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  gcp_vertex_ai_config.yaml  pyproject.toml  requirements gpu.txt  requirements.txt  requirements_dev.txt  requirements_gpu.txt  requirements_test.txt
.dvc/: config
.github/: cloudbuild.yaml
.github/workflows/: cloudbuild.yaml  deploy.yml  docker_build_fastapi.yml  docker_build_train.yml  docker_fastapi.yml  dockers.yml  tests.yml
data/raw/: ASL-MNIST.dvc
dockerfiles/: fastapi.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mnist-signlanguage/: __init__.py  train_model.py
mnist-signlanguage/data/: make_dataset.py
mnist-signlanguage/models/: model.py
mnist_signlanguage/: __init__.py  gcp_test_app.py  predict_api.py  predict_model.py  train_model.py
mnist_signlanguage/config/: train_model.yaml
mnist_signlanguage/config/experiments/: exp1.yaml
mnist_signlanguage/data/: make_dataset.py
mnist_signlanguage/models/: model.py  modelTIMM.py
mnist_signlanguage/utils/: evaluation.py  logging.py  operations.py
reports/: README.md
tests/: __init__.py  test_data.py  test_evaluation.py  test_model.py  test_train.py  test_util_logging.py  test_util_operations.py
tests/config/: test_conf.yml
