[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist_signlanguage"
version = "0.0.1"
description = "A mlops pipeline for doing classification of american sign language letters"
authors = [
  { name = "Katja (s214632)", email = "katjaeriksen@gmail.com" },
  { name = "Sebastian (s204163)", email = "sebastianhbitsch@gmail.com" }
  { name = "Simon (s204157)", email = "simonpontoppidan11@gmail.com" }
  { name = "Markus (s204115)", email = "fugleboefstudies@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mnist_signlanguage"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
